added delete urls

--- a/industry/app1/templates/app1/instrument_form.html
+++ b/industry/app1/templates/app1/instrument_form.html
@@ -156,6 +156,9 @@
         <br>
         <label for="id_instrument_group_code">Instrument Group Code:</label><br>
         {{ instrument_group_master_form.instrument_group_code }}
+        <br>
+        <label for="id_instrument_type">Instrument Type:</label><br>
+        {{ instrument_group_master_form.instrument_type }}        
         <br><br>
 
         <!-- Instrument Model Form -->
