--- a/industry/app1/templates/app1/delivery_challan.html
+++ b/industry/app1/templates/app1/delivery_challan.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>Delivery Challan</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ delivery_challan_form.as_p }}
         
@@ -61,6 +61,12 @@
                     <td>Remark:</td>
                     <td><input type="text" name="remark"></td>
                 </tr>
+
+                <tr>
+                    <td>Calibration Report File:</td>
+                    <td><input type="file" name="calibration_report_file"></td>
+                </tr>
+                
             </tbody>
         </table>
     
