--- a/industry/app1/templates/app1/home.html
+++ b/industry/app1/templates/app1/home.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <h2>Welcome, {{ user.username }}</h2>
+    <a href="{% url 'logout' %}">Logout</a>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
